--- a/pages/player.html
+++ b/pages/player.html
@@ -51,9 +51,8 @@
                 <button id="btnRepeat" class="btn-control"><i class="fas fa-redo"></i></button>
               </div>
               <div class="volume-control">
-                <i class="fas fa-volume-down"></i>
+                <i id="volumeIcon" class="fas fa-volume-up"></i>
                 <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
-                <i class="fas fa-volume-up"></i>
               </div>
             </div>
           </div>
