--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
-  <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
+  <link rel="stylesheet" href="src/css/base.css">
+  <link rel="stylesheet" href="src/css/layout.css">
+  <link rel="stylesheet" href="src/css/components.css">
+  <link rel="stylesheet" href="../css/pages/player.css">
+  <link rel="stylesheet" href="src/css/pages/home.css">
+
 </head>
 <body id="home" data-base="./">
   <div id="header-placeholder"></div>
