--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="src/css/base.css">
   <link rel="stylesheet" href="src/css/layout.css">
   <link rel="stylesheet" href="src/css/components.css">
-  <link rel="stylesheet" href="../css/pages/player.css">
+  <link rel="stylesheet" href="src/css/pages/player.css">
   <link rel="stylesheet" href="src/css/pages/home.css">
 
 </head>
