--- a/pages/cookies.html
+++ b/pages/cookies.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>KingDomfy - Política de Privacidade</title>
+  <title>KingDomfy - Política de Cookies</title>
   <link rel="icon" href="../src/imagens/favicon.png">
   <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
@@ -16,17 +16,17 @@
       <div class="conteudo-interno">
         <div class="row">
           <div class="col-12 text-center mb-5">
-            <h1 class="display-4">Política de Privacidade</h1>
+            <h1 class="display-4">Política de Cookies</h1>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <h2>1. Informações que coletamos</h2>
-            <p>Coletamos informações para fornecer e melhorar nossos serviços...</p>
-            <h2>2. Como usamos as informações</h2>
-            <p>Usamos as informações para personalizar sua experiência...</p>
-            <h2>3. Compartilhamento de informações</h2>
-            <p>Não compartilhamos suas informações pessoais com empresas, organizações ou indivíduos externos...</p>
+            <h2>1. O que são cookies?</h2>
+            <p>Cookies são pequenos arquivos de texto que são armazenados em seu dispositivo...</p>
+            <h2>2. Como usamos os cookies</h2>
+            <p>Usamos cookies para entender como você usa nosso site e para melhorar sua experiência...</p>
+            <h2>3. Gerenciando cookies</h2>
+            <p>Você pode controlar e/ou excluir cookies como desejar...</p>
           </div>
         </div>
       </div>
