--- a/pages/termos.html
+++ b/pages/termos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>KingDomfy - Política de Privacidade</title>
+  <title>KingDomfy - Termos de Uso</title>
   <link rel="icon" href="../src/imagens/favicon.png">
   <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
@@ -16,17 +16,17 @@
       <div class="conteudo-interno">
         <div class="row">
           <div class="col-12 text-center mb-5">
-            <h1 class="display-4">Política de Privacidade</h1>
+            <h1 class="display-4">Termos de Uso</h1>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <h2>1. Informações que coletamos</h2>
-            <p>Coletamos informações para fornecer e melhorar nossos serviços...</p>
-            <h2>2. Como usamos as informações</h2>
-            <p>Usamos as informações para personalizar sua experiência...</p>
-            <h2>3. Compartilhamento de informações</h2>
-            <p>Não compartilhamos suas informações pessoais com empresas, organizações ou indivíduos externos...</p>
+            <h2>1. Aceitação dos termos</h2>
+            <p>Ao acessar e usar o KingDomfy, você aceita e concorda em estar vinculado pelos termos e disposições deste contrato.</p>
+            <h2>2. Modificações dos termos</h2>
+            <p>Reservamo-nos o direito de modificar estes termos a qualquer momento...</p>
+            <h2>3. Uso do serviço</h2>
+            <p>Você concorda em não usar o serviço para fins ilegais ou não autorizados...</p>
           </div>
         </div>
       </div>
