--- a/pages/central.html
+++ b/pages/central.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Conheça o Centro de Privacidade do KingDomfy. Saiba como protegemos seus dados e garantimos a melhor experiência.">
-  <title>KingDomfy - Centro de Privacidade</title>
+  <meta name="description" content="Conheça a Central de Privacidade do KingDomfy. Saiba como cuidamos dos seus dados e garantimos uma experiência segura e transparente.">
+  <meta name="keywords" content="KingDomfy, privacidade, LGPD, termos de uso, cookies, segurança de dados">
+  <title>KingDomfy - Central de Privacidade</title>
   <link rel="icon" href="../src/imagens/favicon.png">
   <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
   <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
 </head>
 <body id="centro-de-privacidade" data-base="../">
@@ -50,8 +50,8 @@
                 </div>
                 <div id="collapseTwo" class="collapse" data-parent="#faqAccordion">
                   <div class="card-body">
-                    <p>Conheça as regras e diretrizes para utilizar o Finans.</p>
-                    <a href="termos-de-uso.html" class="btn btn-sm btn-outline-primary">Ver Termos de Uso</a>
+                    <p>Conheça as regras e diretrizes para utilizar o KingDomfy.</p>
+                    <a href="termos.html" class="btn btn-sm btn-outline-primary">Ver Termos de Uso</a>
                   </div>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div id="collapseThree" class="collapse" data-parent="#faqAccordion">
                   <div class="card-body">
-                    <p>Saiba como o Finans se adequa à legislação brasileira de proteção de dados.</p>
+                    <p>Saiba como o KingDomfy se adequa à legislação brasileira de proteção de dados.</p>
                     <a href="lgpd.html" class="btn btn-sm btn-outline-primary">Ver Página da LGPD</a>
                   </div>
                 </div>
@@ -93,8 +93,8 @@
   </main> 
   <div id="footer-placeholder"></div>
   <script src="../vendor/jquery/jquery.min.js"></script>
-  <script src="../vendor/popper/popper.min.js"></script>
-  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/fontawesome/js/v4-shims.min.js"></script>
   <script src="../src/js/template-loader.js" defer></script>
 </body>
 </html>
