--- a/pages/cookies.html
+++ b/pages/cookies.html
@@ -17,16 +17,39 @@
         <div class="row">
           <div class="col-12 text-center mb-5">
             <h1 class="display-4">Política de Cookies</h1>
+            <p class="lead">Última atualização: 05 de janeiro de 2028</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <h2>1. O que são cookies?</h2>
-            <p>Cookies são pequenos arquivos de texto que são armazenados em seu dispositivo...</p>
-            <h2>2. Como usamos os cookies</h2>
-            <p>Usamos cookies para entender como você usa nosso site e para melhorar sua experiência...</p>
-            <h2>3. Gerenciando cookies</h2>
-            <p>Você pode controlar e/ou excluir cookies como desejar...</p>
+            <p>Esta Política de Cookies explica como a KingDomfy utiliza cookies e tecnologias semelhantes para reconhecer você quando visita nosso site. Ela explica o que são essas tecnologias e por que as usamos, bem como seus direitos de controlar nosso uso delas.</p>
+
+            <h2 class="mt-5">1. O que são cookies?</h2>
+            <p>Cookies são pequenos arquivos de texto que são armazenados em seu computador ou dispositivo móvel quando você visita um site. Eles são amplamente utilizados para fazer os sites funcionarem, ou funcionarem de forma mais eficiente, bem como para fornecer informações aos proprietários do site.</p>
+
+            <h2 class="mt-5">2. Por que usamos cookies?</h2>
+            <p>Usamos cookies por vários motivos. Alguns cookies são necessários por razões técnicas para que nosso site funcione, e nos referimos a eles como cookies "essenciais" ou "estritamente necessários". Outros cookies nos permitem rastrear e direcionar os interesses de nossos usuários para aprimorar a experiência em nossa plataforma. Descrevemos os tipos de cookies que usamos abaixo.</p>
+
+            <h2 class="mt-5">3. Tipos de cookies que utilizamos</h2>
+            <ul>
+              <li>
+                <strong>Cookies Essenciais:</strong> Estes cookies são estritamente necessários para fornecer a você os serviços disponíveis através do nosso site e para usar alguns de seus recursos, como o acesso a áreas seguras. Como esses cookies são essenciais, você não pode recusá-los sem afetar o funcionamento do site.
+              </li>
+              <li>
+                <strong>Cookies de Desempenho e Análise:</strong> Estes cookies coletam informações que são usadas de forma agregada para nos ajudar a entender como nosso site está sendo usado ou quão eficazes são nossas campanhas de marketing. Isso nos ajuda a otimizar o site para melhorar sua experiência.
+              </li>
+              <li>
+                <strong>Cookies Funcionais:</strong> Estes cookies são usados para lembrar as escolhas que você faz em nosso site (como seu nome de usuário, idioma ou a região em que você está) e fornecer recursos aprimorados e mais pessoais. Eles também podem ser usados para lembrar as alterações que você fez no tamanho do texto, fontes e outras partes das páginas da web que você pode personalizar.
+              </li>
+            </ul>
+
+            <h2 class="mt-5">4. Como você pode controlar os cookies?</h2>
+            <p>Você tem o direito de decidir se aceita ou rejeita os cookies. A maioria dos navegadores permite que você controle as configurações de cookies através do menu de opções. Você pode configurar seu navegador para notificá-lo quando receber um novo cookie, ou para recusar cookies completamente. No entanto, se você optar por recusar os cookies, talvez não consiga usar todos os recursos do nosso site.</p>
+            <p>Para obter mais informações sobre como gerenciar cookies, visite a seção de ajuda do seu navegador.</p>
+
+            <h2 class="mt-5">5. Mais Informações</h2>
+            <p>Para mais detalhes sobre como usamos suas informações pessoais, consulte nossa <a href="privacidade.html" class="link-interno">Política de Privacidade</a>.</p>
+
           </div>
         </div>
       </div>
