--- a/pages/privacidade.html
+++ b/pages/privacidade.html
@@ -21,12 +21,53 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <h2>1. Informações que coletamos</h2>
-            <p>Coletamos informações para fornecer e melhorar nossos serviços...</p>
-            <h2>2. Como usamos as informações</h2>
-            <p>Usamos as informações para personalizar sua experiência...</p>
-            <h2>3. Compartilhamento de informações</h2>
-            <p>Não compartilhamos suas informações pessoais com empresas, organizações ou indivíduos externos...</p>
+            <p>A sua privacidade é fundamental para nós. Esta Política de Privacidade explica como a KingDomfy ("nós", "nosso") coleta, usa, compartilha e protege as informações dos nossos usuários ("você"). Esta política se aplica a todos os serviços oferecidos através da nossa plataforma.</p>
+            
+            <h2 class="mt-5">1. Informações que Coletamos</h2>
+            <p>Para fornecer e aprimorar nossos serviços, coletamos os seguintes tipos de informações:</p>
+            <ul>
+              <li><strong>Informações de Cadastro:</strong> Ao criar uma conta, solicitamos dados como seu nome, endereço de e-mail e senha.</li>
+              <li><strong>Informações de Perfil:</strong> Você pode optar por fornecer informações adicionais, como nome de perfil, foto e outras preferências.</li>
+              <li><strong>Dados de Uso:</strong> Coletamos informações sobre como você interage com a nossa plataforma, como as músicas que ouve, playlists que cria, e o tempo gasto no serviço.</li>
+              <li><strong>Dados Técnicos:</strong> Coletamos dados do seu dispositivo, como endereço IP, tipo de navegador, sistema operacional e identificadores de dispositivo, para garantir a compatibilidade e a segurança dos nossos serviços.</li>
+              <li><strong>Cookies e Tecnologias Semelhantes:</strong> Utilizamos cookies para manter sua sessão ativa, personalizar a sua experiência e analisar o desempenho da plataforma. Para mais detalhes, consulte nossa <a href="cookies.html" class="link-interno">Política de Cookies</a>.</li>
+            </ul>
+
+            <h2 class="mt-5">2. Como Usamos as Informações</h2>
+            <p>As informações coletadas são utilizadas para as seguintes finalidades:</p>
+            <ul>
+              <li><strong>Fornecimento dos Serviços:</strong> Para operar, manter e fornecer os recursos da KingDomfy, como a reprodução de músicas e a gestão de playlists.</li>
+              <li><strong>Personalização:</strong> Para recomendar conteúdos, como músicas e artistas, que possam ser do seu interesse.</li>
+              <li><strong>Comunicação:</strong> Para enviar notificações sobre o serviço, atualizações e ofertas promocionais, sempre com a opção de cancelamento.</li>
+              <li><strong>Segurança:</strong> Para proteger nossa plataforma contra fraudes, abusos e outras atividades maliciosas.</li>
+              <li><strong>Análise e Melhoria:</strong> Para entender como nossos usuários utilizam a plataforma e, assim, aprimorar a experiência e desenvolver novos recursos.</li>
+            </ul>
+
+            <h2 class="mt-5">3. Compartilhamento de Informações</h2>
+            <p>A KingDomfy não vende ou aluga suas informações pessoais. O compartilhamento de dados ocorre apenas nas seguintes circunstâncias:</p>
+            <ul>
+              <li><strong>Com seu consentimento:</strong> Podemos compartilhar informações com terceiros quando tivermos sua autorização explícita para fazê-lo.</li>
+              <li><strong>Para Processamento Externo:</strong> Fornecemos informações a parceiros confiáveis que nos ajudam a operar a plataforma (ex: serviços de armazenamento em nuvem), sob estritas obrigações de confidencialidade.</li>
+              <li><strong>Por Razões Legais:</strong> Compartilharemos informações se acreditarmos, de boa-fé, que o acesso ou a divulgação são necessários para cumprir uma lei, regulamentação ou ordem judicial.</li>
+            </ul>
+
+            <h2 class="mt-5">4. Seus Direitos e Escolhas</h2>
+            <p>Respeitamos seus direitos como titular de dados, em conformidade com a Lei Geral de Proteção de Dados (LGPD). Você tem o direito de:</p>
+            <ul>
+              <li>Acessar, corrigir ou excluir suas informações pessoais a qualquer momento através das configurações da sua conta.</li>
+              <li>Opor-se ao processamento dos seus dados para fins de marketing direto.</li>
+              <li>Solicitar a portabilidade dos seus dados para outro fornecedor de serviço.</li>
+            </ul>
+            <p>Para mais detalhes sobre como exercer seus direitos, consulte nossa <a href="lgpd.html" class="link-interno">página sobre a LGPD</a>.</p>
+
+            <h2 class="mt-5">5. Segurança de Dados</h2>
+            <p>Implementamos medidas de segurança técnicas e organizacionais para proteger suas informações contra acesso não autorizado, alteração, divulgação ou destruição. Entre elas, estão a criptografia de dados, o controle de acesso restrito e a monitorização constante dos nossos sistemas.</p>
+
+            <h2 class="mt-5">6. Alterações a esta Política</h2>
+            <p>Podemos atualizar esta Política de Privacidade periodicamente. Notificaremos você sobre quaisquer alterações significativas, publicando a nova política em nosso site e, se aplicável, enviando uma notificação por e-mail.</p>
+            
+            <h2 class="mt-5">7. Contato</h2>
+            <p>Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco através do e-mail: <a href="mailto:privacidade@kingdomfy.com" class="link-interno">privacidade@kingdomfy.com</a>.</p>
           </div>
         </div>
       </div>
